# owasp-json

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.devcontainer/mcp-servers/: credentials.env.example
.gsd/: INFRASTRUCTURE.md  PROJECT.md
.zerg/: config.yaml
agentic-top-10/: 2025-OWASP-Top-10-for-Agentic-Applications-2026-12.6-1-FINAL.json
llm-top-10/: 2025_LLMAll_en-US_final_rc.json
owasp_json/: __init__.py  main.py  parser.py  schema.py
tests/: test_schema.py
